--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ homepage:
 dependencies:
   flutter:
     sdk: flutter
+  path_provider: "0.4.0"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
