--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
 # The following section is specific to Flutter.
 flutter:
   plugin:
-    androidPackage: com.example.backdown
+    androidPackage: com.yyztom.backdown
     pluginClass: BackdownPlugin
 
   # To add assets to your plugin package, add an assets section, like this:
