--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,11 +4,14 @@ version: 0.0.2
 author:
 homepage:
 
+environment:
+  sdk: "<3.0.0"
+
 dependencies:
   flutter:
     sdk: flutter
-  path_provider: "0.4.0"
-  path: "1.6.0"
+  path_provider: "0.4.1"
+  path: "1.6.2"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
